Fix overlapping text

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -12,15 +12,13 @@ h1 {
 	font-family: letter-gothic-std, monospace;
 	font-weight: 700;
 	font-style: normal;
-	font-size: 5em;
-	line-height: 0;
+	font-size: 2em;
 }
 
 h2 {
 	font-family: letter-gothic-std, monospace;
 	font-weight: 700;
 	font-style: normal;
-	line-height: 0;
 }
 
 p {
@@ -48,12 +46,10 @@ img {
 
 .flex-item-left {
   flex: 50%;
-	padding: 1em;
 }
 
 .flex-item-right {
   flex: 50%;
-	padding: 1em;
 }
 
 /* Responsive layout - makes a one column-layout instead of two-column layout */
